--- a/index.ipynb
+++ b/index.ipynb
@@ -205,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of results: 23\n"
+      "Number of results: 122\n"
      ]
     },
     {
@@ -236,99 +236,136 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>employeeNumber</th>\n",
-       "      <th>lastName</th>\n",
-       "      <th>firstName</th>\n",
-       "      <th>extension</th>\n",
-       "      <th>email</th>\n",
-       "      <th>officeCode</th>\n",
-       "      <th>reportsTo</th>\n",
-       "      <th>jobTitle</th>\n",
+       "      <th>customerNumber</th>\n",
+       "      <th>customerName</th>\n",
+       "      <th>contactLastName</th>\n",
+       "      <th>contactFirstName</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>addressLine1</th>\n",
+       "      <th>addressLine2</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>postalCode</th>\n",
+       "      <th>country</th>\n",
+       "      <th>salesRepEmployeeNumber</th>\n",
+       "      <th>creditLimit</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1002</td>\n",
-       "      <td>Murphy</td>\n",
-       "      <td>Diane</td>\n",
-       "      <td>x5800</td>\n",
-       "      <td>dmurphy@classicmodelcars.com</td>\n",
-       "      <td>1</td>\n",
+       "      <td>103</td>\n",
+       "      <td>Atelier graphique</td>\n",
+       "      <td>Schmitt</td>\n",
+       "      <td>Carine</td>\n",
+       "      <td>40.32.2555</td>\n",
+       "      <td>54, rue Royale</td>\n",
        "      <td></td>\n",
-       "      <td>President</td>\n",
+       "      <td>Nantes</td>\n",
+       "      <td></td>\n",
+       "      <td>44000</td>\n",
+       "      <td>France</td>\n",
+       "      <td>1370</td>\n",
+       "      <td>21000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1056</td>\n",
-       "      <td>Patterson</td>\n",
-       "      <td>Mary</td>\n",
-       "      <td>x4611</td>\n",
-       "      <td>mpatterso@classicmodelcars.com</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1002</td>\n",
-       "      <td>VP Sales</td>\n",
+       "      <td>112</td>\n",
+       "      <td>Signal Gift Stores</td>\n",
+       "      <td>King</td>\n",
+       "      <td>Jean</td>\n",
+       "      <td>7025551838</td>\n",
+       "      <td>8489 Strong St.</td>\n",
+       "      <td></td>\n",
+       "      <td>Las Vegas</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>83030</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1166</td>\n",
+       "      <td>71800.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1076</td>\n",
-       "      <td>Firrelli</td>\n",
-       "      <td>Jeff</td>\n",
-       "      <td>x9273</td>\n",
-       "      <td>jfirrelli@classicmodelcars.com</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1002</td>\n",
-       "      <td>VP Marketing</td>\n",
+       "      <td>114</td>\n",
+       "      <td>Australian Collectors, Co.</td>\n",
+       "      <td>Ferguson</td>\n",
+       "      <td>Peter</td>\n",
+       "      <td>03 9520 4555</td>\n",
+       "      <td>636 St Kilda Road</td>\n",
+       "      <td>Level 3</td>\n",
+       "      <td>Melbourne</td>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>3004</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>1611</td>\n",
+       "      <td>117300.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1088</td>\n",
-       "      <td>Patterson</td>\n",
-       "      <td>William</td>\n",
-       "      <td>x4871</td>\n",
-       "      <td>wpatterson@classicmodelcars.com</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1056</td>\n",
-       "      <td>Sales Manager (APAC)</td>\n",
+       "      <td>119</td>\n",
+       "      <td>La Rochelle Gifts</td>\n",
+       "      <td>Labrune</td>\n",
+       "      <td>Janine</td>\n",
+       "      <td>40.67.8555</td>\n",
+       "      <td>67, rue des Cinquante Otages</td>\n",
+       "      <td></td>\n",
+       "      <td>Nantes</td>\n",
+       "      <td></td>\n",
+       "      <td>44000</td>\n",
+       "      <td>France</td>\n",
+       "      <td>1370</td>\n",
+       "      <td>118200.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1102</td>\n",
-       "      <td>Bondur</td>\n",
-       "      <td>Gerard</td>\n",
-       "      <td>x5408</td>\n",
-       "      <td>gbondur@classicmodelcars.com</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1056</td>\n",
-       "      <td>Sale Manager (EMEA)</td>\n",
+       "      <td>121</td>\n",
+       "      <td>Baane Mini Imports</td>\n",
+       "      <td>Bergulfsen</td>\n",
+       "      <td>Jonas</td>\n",
+       "      <td>07-98 9555</td>\n",
+       "      <td>Erling Skakkes gate 78</td>\n",
+       "      <td></td>\n",
+       "      <td>Stavern</td>\n",
+       "      <td></td>\n",
+       "      <td>4110</td>\n",
+       "      <td>Norway</td>\n",
+       "      <td>1504</td>\n",
+       "      <td>81700.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  employeeNumber   lastName firstName extension  \\\n",
-       "0           1002     Murphy     Diane     x5800   \n",
-       "1           1056  Patterson      Mary     x4611   \n",
-       "2           1076   Firrelli      Jeff     x9273   \n",
-       "3           1088  Patterson   William     x4871   \n",
-       "4           1102     Bondur    Gerard     x5408   \n",
+       "  customerNumber                customerName contactLastName contactFirstName  \\\n",
+       "0            103           Atelier graphique         Schmitt          Carine    \n",
+       "1            112          Signal Gift Stores            King             Jean   \n",
+       "2            114  Australian Collectors, Co.        Ferguson            Peter   \n",
+       "3            119           La Rochelle Gifts         Labrune          Janine    \n",
+       "4            121          Baane Mini Imports      Bergulfsen           Jonas    \n",
        "\n",
-       "                             email officeCode reportsTo              jobTitle  \n",
-       "0     dmurphy@classicmodelcars.com          1                       President  \n",
-       "1   mpatterso@classicmodelcars.com          1      1002              VP Sales  \n",
-       "2   jfirrelli@classicmodelcars.com          1      1002          VP Marketing  \n",
-       "3  wpatterson@classicmodelcars.com          6      1056  Sales Manager (APAC)  \n",
-       "4     gbondur@classicmodelcars.com          4      1056   Sale Manager (EMEA)  "
+       "          phone                  addressLine1 addressLine2       city  \\\n",
+       "0    40.32.2555                54, rue Royale                  Nantes   \n",
+       "1    7025551838               8489 Strong St.               Las Vegas   \n",
+       "2  03 9520 4555             636 St Kilda Road      Level 3  Melbourne   \n",
+       "3    40.67.8555  67, rue des Cinquante Otages                  Nantes   \n",
+       "4    07-98 9555        Erling Skakkes gate 78                 Stavern   \n",
+       "\n",
+       "      state postalCode    country salesRepEmployeeNumber creditLimit  \n",
+       "0                44000     France                   1370    21000.00  \n",
+       "1        NV      83030        USA                   1166    71800.00  \n",
+       "2  Victoria       3004  Australia                   1611   117300.00  \n",
+       "3                44000     France                   1370   118200.00  \n",
+       "4                 4110     Norway                   1504    81700.00  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cur.execute('select * from employees;')\n",
+    "cur.execute('select * from customers;')\n",
     "df = pd.DataFrame(cur.fetchall())\n",
     "df.columns = [i[0] for i in cur.description]\n",
     "print('Number of results:', len(df))\n",
